src/objects/GlobalSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Acceptable_Plan_Ids__c</fullName>
        <label>Acceptable Plan Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_trigger_switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field added as a part of PPN-23504 . This fields help to turn on and off the Case Trigger</description>
        <label>Account trigger switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation_Trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field added as a part of PPN-23504 . This fields help to turn on and off the Case Trigger</description>
        <label>Affiliation Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_trigger_switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field added as a part of PPN-23504 . This fields help to turn on and off the Case Trigger</description>
        <label>Agent trigger switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorised_Profiles_To_Escalate_Case__c</fullName>
        <description>This Field added part of PPN-30084 and this field will hold authorized user profiles to Escalate a case.</description>
        <label>Authorised Profiles To Escalate Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorized_Profiles_To_Route_Contracting__c</fullName>
        <description>This Field added part of PPN-30084 and this field will hold authorized user profiles to routing a case to contracting queue.</description>
        <label>Authorized_Profiles_To_Route_Contracting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Avoided_Case_Origins__c</fullName>
        <description>This Field will hold the parent origin values that should not considered in caseStatusUpdate() function.</description>
        <label>Avoided Case Origins</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Case_Origin_Values__c</fullName>
        <label>CRM Case Origin Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Case_Status_fields__c</fullName>
        <label>CRM Case Status fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Case_record_Type_Id__c</fullName>
        <label>CRM_Case_record_Type_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Master_Record_Type_Id__c</fullName>
        <label>CRM Master Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseComment_Trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field added as a part of PPN-23504 . This fields help to turn on and off the Case Trigger</description>
        <label>CaseComment Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Attachment_Trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field added as a part of PPN-23504 . This fields help to turn on and off the Case Trigger</description>
        <label>Case Attachment Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field help to turn on and off the Case Trigger</description>
        <label>Case trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credentialing_record_types__c</fullName>
        <description>This field holds the credentialing record types and these record types are used when a crm case is a child for credentialing case it will bi pass the parent case status change.</description>
        <label>Credentialing record types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailMessage_Trigger_Switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field added as a part of PPN-23504 . This fields help to turn on and off the Case Trigger</description>
        <label>EmailMessage Trigger Switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Ancillary_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Ancillary Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_record_type_id__c</fullName>
        <label>Entity record type id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fake_Email__c</fullName>
        <label>Fake Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Profile_Id__c</fullName>
        <label>Integration Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_size__c</fullName>
        <label>List size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MCC_Case_Origin__c</fullName>
        <label>MCC Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCC_trigger_switch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field added as a part of PPN-23504 . This fields help to turn on and off the Case Trigger</description>
        <label>MCC trigger switch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFFileRecieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PFFileRecieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_record_id__c</fullName>
        <label>Physician record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Names__c</fullName>
        <description>This field values are utilized in Apex class  &apos;OMNIQueueRecaluclation&apos; to eliminate the Case record types while querying the records</description>
        <inlineHelpText>This field values are utilized in Apex class  &apos;OMNIQueueRecaluclation&apos; to eliminate the Case record types while querying the records</inlineHelpText>
        <label>Record Type Names</label>
        <type>TextArea</type>
    </fields>
    <label>Global Settings</label>
</CustomObject>